# ariadne

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.githooks/: post-worktree
ariadne_analyzer/: __init__.py
ariadne_api/: __init__.py  app.py  dependencies.py  metrics.py  middleware.py  rate_limiter.py
ariadne_cli/: __init__.py  main.py
ariadne_core/: __init__.py  container.py
ariadne_llm/: __init__.py  client.py  config.py  embedder.py
asm-analysis-service/: README.md  pom.xml  run.bat  run.sh
docs/: AGENT_INTEGRATION.md
scripts/: setup-claude-settings.sh  worktree-add.sh
test_results/: TEST_SUMMARY.md  mall_test_report.md
tests/: demo_l1_features.py  p1_fixes_demo.py  test_llm_integration.py
todos/: 001-complete-p1-hardcoded-api-keys-security-vulnerability.md  002-complete-p1-resource-leak-threadpool-executor-not-closed.md  003-complete-p1-path-traversal-vulnerability-cli-file-operations.md  004-complete-p2-async-sync-mixing-batch-generate-summaries.md  005-complete-p2-insecure-default-api-key-fallback.md  006-complete-p3-zero-vector-fallback-in-embed-texts.md  007-complete-p2-data-integrity-sqlite-chromadb-synchronization.md  008-complete-p2-missing-foreign-key-constraints.md  009-pending-p3-agent-native-api-completeness.md  010-complete-p1-missing-logger-import-runtime-error.md  011-complete-p1-insert-or-replace-breaks-foreign-key-cascade.md  012-complete-p2-missing-foreign-key-on-anti-patterns-table.md  013-complete-p2-static-method-missing-decorator.md  014-complete-p2-severity-type-mismatch-string-vs-enum.md  (+38 more)
(+191 files in other folders)
